# infrastructure

./: .gitignore
.github/workflows/: README.md  deploy-sagemaker-pipelines.yml  destroy-infrastructure.yml  on-pull-request.yml  sagemaker-pipelines-pr.yml  sagemaker-studio-deploy.yml  terraform-deploy.yml  terraform-destroy.yml  terraform-plan.yml
mlflow/terraform/staging/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
sagemaker-pipelines/: .editorconfig  .gitignore  CHANGES.md  README.md  task.py
sagemaker-pipelines/scripts/: build_push_ecr.sh  generate_params_json.py
sagemaker-pipelines/src/inference/: Dockerfile  README.md  pyproject.toml  requirements.txt
sagemaker-pipelines/src/inference/app/: __init__.py  inference.py  kafka_io.py  model_io.py  score_to_kafka.py
sagemaker-pipelines/src/training/: Dockerfile  README.md  pyproject.toml  requirements.txt
sagemaker-pipelines/src/training/app/: __init__.py  train.py  utils.py
sagemaker-pipelines/terraform/prod/: backend.tf  main.tf  outputs.tf  variables.tf
sagemaker-pipelines/terraform/staging/: PRIVATE_SUBNET_DEPLOYMENT.md  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
sagemaker-studio/terraform/staging/: README.md  SETUP.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
sagemaker-training-jobs/terraform/staging/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/module/mlflow/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/module/sagemaker-pipelines/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/module/sagemaker-processing-jobs/: main.tf  outputs.tf  variables.tf
terraform/module/sagemaker-studio/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/module/sagemaker-studio/examples/: staging-example.tf  terraform.tfvars.example
terraform/module/sagemaker-training-jobs/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/module/sagemaker-training-jobs/examples/: staging-example.tf  terraform.tfvars.example
terraform/module/sagemaker-training-jobs/lambda/: default_launcher.py
