[project]
name = "iris-inference"
version = "1.0.0"
description = "Simple Iris model inference for SageMaker"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.8.0",
    "boto3>=1.34.0",
]

[project.scripts]
inference = "app.inference:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"